--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Rock, paper, scissors!</title>
 </head>
 <body>
-    
+    <h1>Rock, paper, scissors!</h1>
+    <script src="script.js"></script>
 </body>
 </html>
